product-service/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-ingress
  namespace: product-namespace
spec:
  rules:
    - host: a91761de69b34418b9e2a75f63e5f591-269956137.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8081
